--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+header h1 {
+  text-align: center;
+  margin: 5rem;
+}
 .deck {
   display: grid;
   grid-template-rows: 33.3% 33.3% 33.3%;
@@ -12,11 +16,24 @@
 .card_cont {
   width: 190px;
   height: 300px;
-  background: url("../img/pattern.jpg") fixed center center no-repeat;
+  background: url("../img/pattern.jpg") center center no-repeat;
   background-size: cover;
-  border: solid 6px;
+  border: solid 6px #eaac0f;
   border-radius: 10px;
+  box-shadow: 0px 0px 9px #4e30008f;
+  transition: width 0.3s, height 0.3s, box-shadow 0.3s;
 }
+
+.card_cont:hover {
+    width: 200px;
+    height: 310px;
+    box-shadow: 0px 0px 30px #00000055;
+}
+
+.card_cont.change{
+    background:#eaac0f
+}
+
 .top-deck {
   grid-area: "top";
   display: flex;
