--- a/style.css
+++ b/style.css
@@ -16,22 +16,26 @@ header h1 {
 .card_cont {
   width: 190px;
   height: 300px;
-  background: url("../img/pattern.jpg") center center no-repeat;
-  background-size: cover;
-  border: solid 6px #eaac0f;
   border-radius: 10px;
   box-shadow: 0px 0px 9px #4e30008f;
-  transition: width 0.3s, height 0.3s, box-shadow 0.3s;
+
 }
 
-.card_cont:hover {
+.figlio:hover {
     width: 200px;
     height: 310px;
     box-shadow: 0px 0px 30px #00000055;
 }
 
-.card_cont.change{
-    background:#eaac0f
+.figlio{
+    border: solid 6px hsl(43, 88%, 49%);
+    border-radius: 10px;
+    width: 190;
+    height: 19rem;
+    border-radius: 10px;
+    background: url("../img/pattern.jpg") center center no-repeat;
+  background-size: cover;
+  transition: width 0.3s, height 0.3s, box-shadow 0.3s;
 }
 
 .top-deck {
@@ -48,7 +52,7 @@ header h1 {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-top: 1rem;
+    margin-top: 1rem;
 }
 .bottom-deck {
   grid-area: "top";
@@ -56,5 +60,5 @@ header h1 {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-top: 1rem;
+    margin-top: 1rem;
 }
